@@ -656,6 +656,11 @@ $content_actions: The array of content actions
 		     Can be used to set custom CSS/JS
 $out: OutputPage object
 
+'ShowRawCssJs': When presenting raw CSS and JavaScript during page views
+&$text: Text being shown
+$title: Title of the custom script/stylesheet page
+$output: Current OutputPage object
+
 'AjaxAddScript': Called in output page just before the initialisation
 of the javascript ajax engine. The hook is only called when ajax
 is enabled ( $wgUseAjax = true; ).
